network-policies/restrict-api-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-api-traffic
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: api-dev
      app.kubernetes.io/name: api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: web-dev
              app.kubernetes.io/name: web
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: postgres-dev
              app.kubernetes.io/name: postgres
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: web-dev
              app.kubernetes.io/name: web
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: postgres-dev
              app.kubernetes.io/name: postgres
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-api-traffic
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: api-prod
      app.kubernetes.io/name: api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: web-prod
              app.kubernetes.io/name: web
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: postgres-prod
              app.kubernetes.io/name: postgres
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: web-prod
              app.kubernetes.io/name: web
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: postgres-prod
              app.kubernetes.io/name: postgres
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
    - Egress
